# habits

./: .env.sample  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
track_habits/: apps.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
track_habits/migrations/: 0001_initial.py  0002_initial.py  0003_remove_habit_period.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
